# MENTE_attendance

./: .gitignore  README.md  main.py  pyproject.toml
data/: anyakonyvezheto_utonevek_2019_08.csv
src/: MENTE_jelenlet_config.py  MENTE_jelenlet_osszegzes_2.py
src/jelenlet/: cli.py  database.py  errors.py  excel_export.py  fixer.py  paths.py  process.py  web.py
src/jelenlet/config/: database.example.py
src/jelenlet/fixer/: __init__.py  email_fixer.py  fixer.py  name_fixer.py
tests/: test_blackbox_ok.py
tests/data/name_typo/expected/: kozep_proba_osszegzes_input.xlsx
tests/data/name_typo/input/: Középhaladós próba - 2025. 12. 01. (válaszok).xlsx  Középhaladós próba - 2025. 12. 08. (válaszok).xlsx  Középhaladós próba - 2025. 12. 15. (válaszok).xlsx
tests/data/ok/expected/: kozep_proba_osszegzes_input.xlsx
tests/data/ok/input/: Középhaladós próba - 2025. 12. 01. (válaszok).xlsx
